--- a/notebooks/parser.ipynb
+++ b/notebooks/parser.ipynb
@@ -54,159 +54,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "[{'class': 'BillDebate',\n",
-      "  'debates': [{'class': 'SubDebate',\n",
-      "               'speeches': {'class': 'SubDebate',\n",
-      "                            'speeches': ['Speech',\n",
-      "                                         'Intervention',\n",
-      "                                         'ContinueSpeech',\n",
-      "                                         'a',\n",
-      "                                         'a',\n",
-      "                                         'a',\n",
-      "                                         'a',\n",
-      "                                         'a',\n",
-      "                                         'a',\n",
-      "                                         'a',\n",
-      "                                         'Speech',\n",
-      "                                         'Speech',\n",
-      "                                         'a',\n",
-      "                                         'a',\n",
-      "                                         'a',\n",
-      "                                         'a',\n",
-      "                                         'a',\n",
-      "                                         'a',\n",
-      "                                         'a',\n",
-      "                                         'a',\n",
-      "                                         'a',\n",
-      "                                         'a',\n",
-      "                                         'a',\n",
-      "                                         'a',\n",
-      "                                         'Speech',\n",
-      "                                         'a',\n",
-      "                                         'a',\n",
-      "                                         'a',\n",
-      "                                         'a',\n",
-      "                                         'a',\n",
-      "                                         'a',\n",
-      "                                         'Interjection',\n",
-      "                                         'ContinueSpeech',\n",
-      "                                         'a',\n",
-      "                                         'a',\n",
-      "                                         'Speech',\n",
-      "                                         'a',\n",
-      "                                         'a',\n",
-      "                                         'a',\n",
-      "                                         'a',\n",
-      "                                         'a',\n",
-      "                                         'Speech',\n",
-      "                                         'a',\n",
-      "                                         'a',\n",
-      "                                         'a',\n",
-      "                                         'a',\n",
-      "                                         'a',\n",
-      "                                         'a',\n",
-      "                                         'a',\n",
-      "                                         'Speech',\n",
-      "                                         'a',\n",
-      "                                         'a',\n",
-      "                                         'a',\n",
-      "                                         'a',\n",
-      "                                         'a',\n",
-      "                                         'a',\n",
-      "                                         'a',\n",
-      "                                         'a',\n",
-      "                                         'a',\n",
-      "                                         'Speech',\n",
-      "                                         'a',\n",
-      "                                         'a',\n",
-      "                                         'a',\n",
-      "                                         'a',\n",
-      "                                         'a',\n",
-      "                                         'a',\n",
-      "                                         'Speech',\n",
-      "                                         'a',\n",
-      "                                         'a',\n",
-      "                                         'a',\n",
-      "                                         'a',\n",
-      "                                         'a',\n",
-      "                                         'a',\n",
-      "                                         'a',\n",
-      "                                         'a',\n",
-      "                                         'a',\n",
-      "                                         'a',\n",
-      "                                         'a',\n",
-      "                                         'Speech',\n",
-      "                                         'a',\n",
-      "                                         'a',\n",
-      "                                         'a',\n",
-      "                                         'a',\n",
-      "                                         'a',\n",
-      "                                         'a',\n",
-      "                                         'a',\n",
-      "                                         'Speech',\n",
-      "                                         'a',\n",
-      "                                         'a',\n",
-      "                                         'a',\n",
-      "                                         'a',\n",
-      "                                         'a',\n",
-      "                                         'Speech',\n",
-      "                                         'Speech',\n",
-      "                                         'a',\n",
-      "                                         'a',\n",
-      "                                         'a',\n",
-      "                                         'a',\n",
-      "                                         'a',\n",
-      "                                         'a',\n",
-      "                                         'a',\n",
-      "                                         'a',\n",
-      "                                         'a',\n",
-      "                                         'a',\n",
-      "                                         'Interjection',\n",
-      "                                         'CentredEndingItalics',\n",
-      "                                         'Speech',\n",
-      "                                         'a',\n",
-      "                                         'a',\n",
-      "                                         'a',\n",
-      "                                         'a',\n",
-      "                                         'a',\n",
-      "                                         'a',\n",
-      "                                         'Interjection',\n",
-      "                                         'ContinueSpeech',\n",
-      "                                         'Interjection',\n",
-      "                                         'ContinueSpeech',\n",
-      "                                         'a',\n",
-      "                                         'a',\n",
-      "                                         'a',\n",
-      "                                         'Speech',\n",
-      "                                         'a',\n",
-      "                                         'a',\n",
-      "                                         'a',\n",
-      "                                         'a',\n",
-      "                                         'a',\n",
-      "                                         'a',\n",
-      "                                         'a',\n",
-      "                                         'a',\n",
-      "                                         'a',\n",
-      "                                         'a',\n",
-      "                                         'a',\n",
-      "                                         'IndentMarginalone']}},\n",
-      "              'Debate',\n",
-      "              {'class': 'SubDebate',\n",
-      "               'speeches': {'class': 'SubDebate',\n",
-      "                            'speeches': ['Speech',\n",
-      "                                         'Speech',\n",
-      "                                         'Interjection',\n",
-      "                                         'Interjection',\n",
-      "                                         'a',\n",
-      "                                         'Debatealone',\n",
-      "                                         'Speech']}}]}]\n"
+     "ename": "NameError",
+     "evalue": "name 'parsed' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "\u001b[1;32m~\\AppData\\Local\\Temp/ipykernel_25932/419926148.py\u001b[0m in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[0;32m     21\u001b[0m \u001b[0moutput\u001b[0m \u001b[1;33m=\u001b[0m \u001b[1;33m[\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m     22\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m---> 23\u001b[1;33m \u001b[1;32mfor\u001b[0m \u001b[0mtag\u001b[0m \u001b[1;32min\u001b[0m \u001b[0mparsed\u001b[0m\u001b[1;33m[\u001b[0m\u001b[1;36m5\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m     24\u001b[0m     \u001b[0mcurrent_class\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mtag\u001b[0m\u001b[1;33m[\u001b[0m\u001b[1;34m\"class\"\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m     25\u001b[0m     \u001b[1;32mif\u001b[0m \u001b[1;34m\"debates\"\u001b[0m \u001b[1;32min\u001b[0m \u001b[0mtag\u001b[0m \u001b[1;32mor\u001b[0m \u001b[1;34m\"speeches\"\u001b[0m \u001b[1;32min\u001b[0m \u001b[0mtag\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
+      "\u001b[1;31mNameError\u001b[0m: name 'parsed' is not defined"
      ]
     }
    ],
@@ -238,7 +97,7 @@
     "    if \"debates\" in tag or \"speeches\" in tag:\r\n",
     "        current_class = add_speeches_or_debates(tag)\r\n",
     "    output.append(current_class)\r\n",
-    "pprint(output)"
+    "# pprint(output)"
    ]
   },
   {
