--- a/notebooks/scrape.ipynb
+++ b/notebooks/scrape.ipynb
@@ -4,7 +4,16 @@
    "cell_type": "code",
    "execution_count": 2,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "The autoreload extension is already loaded. To reload it, use:\n",
+      "  %reload_ext autoreload\n"
+     ]
+    }
+   ],
    "source": [
     "%load_ext autoreload\r\n",
     "%autoreload 2"
@@ -53,22 +62,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "report saved to: output/reports/debate_20210708_20210708.json\n",
-      "report saved to: output/reports/debate_20210707_20210708.json\n",
-      "report saved to: output/reports/debate_20210707_20210707.json\n",
-      "report saved to: output/reports/debate_20210706_20210706.json\n",
-      "report saved to: output/reports/debate_20210701_20210701.json\n",
-      "report saved to: output/reports/debate_20210630_20210630.json\n",
-      "report saved to: output/reports/debate_20210629_20210629.json\n",
-      "report saved to: output/reports/debate_20210624_20210624.json\n",
-      "report saved to: output/reports/debate_20210623_20210623.json\n"
+      "report saved to: ../output/reports/debate_20210708_20210708.json\n",
+      "report saved to: ../output/reports/debate_20210707_20210708.json\n",
+      "report saved to: ../output/reports/debate_20210707_20210707.json\n",
+      "report saved to: ../output/reports/debate_20210706_20210706.json\n",
+      "report saved to: ../output/reports/debate_20210701_20210701.json\n",
+      "report saved to: ../output/reports/debate_20210630_20210630.json\n",
+      "report saved to: ../output/reports/debate_20210629_20210629.json\n",
+      "report saved to: ../output/reports/debate_20210624_20210624.json\n",
+      "report saved to: ../output/reports/debate_20210623_20210623.json\n"
      ]
     },
     {
@@ -78,9 +87,9 @@
      "traceback": [
       "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
       "\u001b[1;31mKeyError\u001b[0m                                  Traceback (most recent call last)",
-      "\u001b[1;32m~\\AppData\\Local\\Temp/ipykernel_1160/4015405539.py\u001b[0m in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[0;32m      9\u001b[0m     preface, html_tags, _, _ = initial_parse(\n\u001b[0;32m     10\u001b[0m         report_meta[0], report_meta[1])\n\u001b[1;32m---> 11\u001b[1;33m     \u001b[0mparsed\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mparse_all_html\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mhtml_tags\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m     12\u001b[0m     \u001b[0mparsed\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0minsert\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;36m0\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mpreface\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m     13\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n",
-      "\u001b[1;32mc:\\Users\\dallym\\OneDrive - Genesis Energy Limited\\Documents\\Projects\\parliament-scraper\\notebooks\\..\\parliament\\scraper.py\u001b[0m in \u001b[0;36mparse_all_html\u001b[1;34m(html_tags)\u001b[0m\n\u001b[0;32m    274\u001b[0m                 \u001b[1;32mdel\u001b[0m \u001b[0mtag\u001b[0m\u001b[1;33m[\u001b[0m\u001b[1;34m\"raw_tag\"\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m    275\u001b[0m     \u001b[0mspeakers_split\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0msplit_speaker_subtext\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mspeakers_filled\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m--> 276\u001b[1;33m     \u001b[0mq_and_a_grouped\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mq_and_a_grouper\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mspeakers_split\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m    277\u001b[0m     \u001b[0mbill_debate_grouped\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mbill_debate_grouper\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mq_and_a_grouped\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m    278\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n",
-      "\u001b[1;32mc:\\Users\\dallym\\OneDrive - Genesis Energy Limited\\Documents\\Projects\\parliament-scraper\\notebooks\\..\\parliament\\scraper.py\u001b[0m in \u001b[0;36mq_and_a_grouper\u001b[1;34m(parsed_tags)\u001b[0m\n\u001b[0;32m    102\u001b[0m                 and not (tag_class == \"SupAnswer\"\n\u001b[0;32m    103\u001b[0m                 or tag_id in [INTERJECTION, SPEECH, CONT_SPEECH, NOTE])):\n\u001b[1;32m--> 104\u001b[1;33m                 current_question_group[\"follow_up_questions\"].append(\n\u001b[0m\u001b[0;32m    105\u001b[0m                     \u001b[0mcurrent_sup_question\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m    106\u001b[0m                 )\n",
+      "\u001b[1;32m~\\AppData\\Local\\Temp/ipykernel_17280/2737899491.py\u001b[0m in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[0;32m      9\u001b[0m     preface, html_tags, _, _ = initial_parse(\n\u001b[0;32m     10\u001b[0m         report_meta[0], report_meta[1])\n\u001b[1;32m---> 11\u001b[1;33m     \u001b[0mparsed\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mparse_all_html\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mhtml_tags\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m     12\u001b[0m     \u001b[0mparsed\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0minsert\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;36m0\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mpreface\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m     13\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n",
+      "\u001b[1;32mc:\\Users\\dallym\\OneDrive - Genesis Energy Limited\\Documents\\Projects\\parliament-scraper\\notebooks\\..\\parliament\\scraper.py\u001b[0m in \u001b[0;36mparse_all_html\u001b[1;34m(html_tags)\u001b[0m\n\u001b[0;32m    277\u001b[0m                 \u001b[1;32mdel\u001b[0m \u001b[0mtag\u001b[0m\u001b[1;33m[\u001b[0m\u001b[1;34m\"raw_tag\"\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m    278\u001b[0m     \u001b[0mspeakers_split\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0msplit_speaker_subtext\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mspeakers_filled\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m--> 279\u001b[1;33m     \u001b[0mq_and_a_grouped\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mq_and_a_grouper\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mspeakers_split\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m    280\u001b[0m     \u001b[0mbill_debate_grouped\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mbill_debate_grouper\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mq_and_a_grouped\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m    281\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n",
+      "\u001b[1;32mc:\\Users\\dallym\\OneDrive - Genesis Energy Limited\\Documents\\Projects\\parliament-scraper\\notebooks\\..\\parliament\\scraper.py\u001b[0m in \u001b[0;36mq_and_a_grouper\u001b[1;34m(parsed_tags)\u001b[0m\n\u001b[0;32m    105\u001b[0m                 and not (tag_class == \"SupAnswer\"\n\u001b[0;32m    106\u001b[0m                 or tag_id in [INTERJECTION, SPEECH, CONT_SPEECH, NOTE])):\n\u001b[1;32m--> 107\u001b[1;33m                 current_question_group[\"follow_up_questions\"].append(\n\u001b[0m\u001b[0;32m    108\u001b[0m                     \u001b[0mcurrent_sup_question\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m    109\u001b[0m                 )\n",
       "\u001b[1;31mKeyError\u001b[0m: 'follow_up_questions'"
      ]
     }
@@ -90,7 +99,7 @@
     "import json\r\n",
     "\r\n",
     "\r\n",
-    "outdir = \"output/reports\"\r\n",
+    "outdir = \"../output/reports\"\r\n",
     "os.makedirs(outdir, exist_ok=True)\r\n",
     "\r\n",
     "for report_meta in report_links:\r\n",
@@ -119,10 +128,10 @@
  ],
  "metadata": {
   "interpreter": {
-   "hash": "32172371068f9c49b98a1f93223636cfb40c8efecc9a856a904e50307d357046"
+   "hash": "e601707af480cebf7e51d900887f935fefdedfb11ef14622244ade15df2d9e9b"
   },
   "kernelspec": {
-   "display_name": "Python 3.8.10 64-bit ('parliament_scraper': conda)",
+   "display_name": "Python 3.8.10 64-bit ('huri_whakatau': conda)",
    "name": "python3"
   },
   "language_info": {
